<resources>
    <string name="app_name">Weather Viewer</string>
    <string name="app_settings">Weather Viewer Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="txt_temp_min_max">Temperature: %1$s ... %2$s</string>
    <string name="txt_temp_min">Minimum temperature: %1$s</string>
    <string name="txt_temp_max">Maximum temperature: %1$s</string>
    <string name="txt_pressure">Atmospheric pressure: %1$.2f hPa</string>
    <string name="txt_humidity">Humidity: %1$d%%</string>
    <string name="txt_wind_speed_direction">Wind: %1$d m/s, %2$s</string>
    <string name="txt_wind_speed">Wind speed: %1$d m/s</string>
    <string name="txt_wind_direction">Wind direction: %1$d degrees (meteorological), %2$s</string>
    <string name="txt_clouds">Cloudiness: %1$d%%</string>
    <string name="txt_rain">Rain volume for last 3 hours: %1$s mm</string>
    <string name="txt_snow">Snow volume for last 3 hours: %1$s</string>
    <string name="txt_no_data">Weather forecast is missing</string>
    <string name="txt_no_internet_connection">Internet connection unavailable</string>
    <string name="txt_check_internet_connection">Check the internet connection and reload data</string>
    <string name="txt_last_update">Last updated at %1$s</string>
    <string name="txt_unknown_error">Unknown error</string>

    <string name="notification_last_update">Weather Forecast updated at %1$s</string>
    <string name="notification_text_update">Update</string>
    <string name="notification_update_started">Weather forecast update started</string>
    <string name="notification_update_in_progress">Weather forecast update in progress</string>
    <string name="notification_update_updated">Weather forecast updated</string>
    <string name="notification_update_error">Weather forecast update error</string>
    <string name="notification_service_start">Weather Forecast NotificationService started</string>
    <string name="notification_service_stop">Weather Forecast NotificationService stopped</string>
    <string name="notification_current_weather_title">%1$s %2$s</string>
    <string name="notification_current_weather_big_title">%1$s %2$s</string>
    <string name="notification_current_weather_ticker">%1$s %2$s %3$s, %4$s</string>
    <string name="notification_current_weather_message">%1$s, %2$s</string>
</resources>
