<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/forecast_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="08:00"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/forecast_detail_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="MONDAY"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/forecast_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="23 NOV 2015"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/forecast_detail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_10d" />

            <TextView
                android:id="@+id/forecast_detail_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+10 C"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TextView
            android:id="@+id/forecast_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="Weather forecast info"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/forecast_detail_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_temp_min"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_detail_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_temp_max"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_detail_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_pressure"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_detail_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_humidity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_detail_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_wind_speed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_detail_wind_deg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_wind_direction"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_detail_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_clouds"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/forecast_detail_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_rain"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/forecast_detail_snow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/txt_snow"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

</LinearLayout>